# nodrikjobs

./: README.md  hello.py  job_data.csv  pyproject.toml  requirements.txt
src/: job_agent.py
src/input_kywords/: fetch_keywords.py
src/scrapper/: new_scrapper.py  scrape_jobs.py  scrapper_class.py
