[project]
name = "relevnatjobs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "faiss-cpu>=1.11.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-ollama>=0.3.3",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "pypdf>=5.6.0",
    "requests>=2.32.3",
    "scipy>=1.15.3",
    "scrapy>=2.13.1",
    "selenium>=4.33.0",
]
